--- a/dive/index.html
+++ b/dive/index.html
@@ -121,40 +121,8 @@
     </p>
     <hr>
     <p>
-      The basic lore of Threes variants, of which there are many (three cheers to <a href="https://github.com">github</a>!), is well known by now: the deluge was opened by <strong>2048</strong>, created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> which in turn was conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer</a>.
+      This is a fork of <a href="http://alexfink.github.io/dive/">Alex Fink's version</a>, see that version for more history information.
     </p>
-    <p>The basic idea of this variant was due to 
-      <a href="https://www.google.com/+AllenKnutson">Allen Knutson</a>, 
-      with design contributions also from <a href="http://000024.org">myself</a> and
-      <a href="https://plus.google.com/+VynceMontgomery">Vynce Montgomery</a>.
-      It was first implemented as 
-      <a href="http://themoreyouknow.github.io/div/">DIV by TheMoreYouKnow</a>; 
-      this version is a fork of theirs.
-    </p>
-    <p>The name "Dive" is 
-      the historically most justified way to spell /d&#x26a;v/ 
-      in English; compare "give", "live".</p>
-    <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Dive, a Threes-like where you join numbers with their divisors! alexfink.github.io/dive" data-via="tmykgh">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>    
-      <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-      <g:plusone></g:plusone>
-
-    <p>You can still donate to Gabriele Cirulli below, but <a href="http://asherv.com/threes/threemails/">consider
-      whether</a> you wouldn't rather <a href="http://asherv.com/threes/">buy Threes</a>!</>
-      <form class="pp-donate" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="W59BD72T97DVC">
-        <button name="submit"><img src="icon_pp.svg">Donate</button>
-        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-      </form>
-
-      <span class="btc-donate">
-        <a href="bitcoin:1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i">
-          <img src="icon_bitcoin.svg">Donate BTC
-        </a>
-        <span class="address"><code>1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i</code></span>
-      </span>
 
     </div>
     <hr>
