--- a/dive/index.html
+++ b/dive/index.html
@@ -88,6 +88,9 @@
     <form method="post" name="baseForm" id="baseForm">
       <p class="game-intro">Base:
         <select id="baseSelect" name="baseSelect" onchange="changeBase()">
+          <option value="2">
+            binary
+          </option>
           <option value="10" selected="selected">
             decimal
           </option>
