added ability to hide numbers

--- a/dive/index.html
+++ b/dive/index.html
@@ -97,6 +97,9 @@
           <option value="16">
             hex
           </option>
+          <option value="0">
+            none
+          </option>
         </select>
       </p>
     </form>
